# aero-cfd-wasm

./: .gitignore  CMakeLists.txt  README.md  build_wasm.sh
include/lbm/: geometry.hpp  lbm.hpp
src/: native_main.cpp  wasm_bindings.cpp
web/: index.html  render.js
